#------------------------------------------------------
# TODO: Need to edit bin_PROGRAMS/name_SOURCES
# and soure code list to real project name.
#------------------------------------------------------

bin_PROGRAMS = name

AM_CPPFLAGS = -D_GNU_SOURCE

AM_CFLAGS = -Wall
AM_CFLAGS += -Wmissing-prototypes -Wmissing-declarations -Wredundant-decls -Wunused-function
AM_CFLAGS += -fno-strict-aliasing

LDFLAGS += -rdynamic

name_SOURCES = main.h main.c
